- feat: added video preview - feat: replaced touch icon with play button for video - fix: remove scale video card because it flickers on mobile - feat: added list to each video card for non video player users

--- a/src/assets/styles/base/variables.css
+++ b/src/assets/styles/base/variables.css
@@ -24,7 +24,7 @@
   --font-size-xl: 42px;
   --font-size-lg: 20px;
   --font-size-md: 16px;
-  --font-size-sm: 12px;
+  --font-size-sm: 14px;
   --font-size-xs: 8px;
 
   --global-viewPadding: 20px;
